tests/ui/lifetimes/issue-79187.stderr
error: higher-ranked subtype error
  --> $DIR/issue-79187.rs:5:5
   |
LL |     thing(f);
   |     ^^^^^^^^

error: higher-ranked subtype error
  --> $DIR/issue-79187.rs:5:5
   |
LL |     thing(f);
   |     ^^^^^^^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: aborting due to 2 previous errors

